[package]
name = "obex_alpha_i"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
obex_primitives = { path = "../obex_primitives" }
ed25519-dalek = { version = "2.1", default-features = false, features = ["pkcs8"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "alpha_i_verify"
harness = false


