[package]
name = "obex_node"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
obex_primitives = { path = "../obex_primitives" }
obex_alpha_i = { path = "../obex_alpha_i" }
obex_alpha_ii = { path = "../obex_alpha_ii" }
obex_alpha_iii = { path = "../obex_alpha_iii" }
obex_alpha_t = { path = "../obex_alpha_t" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
vrf-rfc9381 = { version = "0.0.3", features = ["ec", "edwards25519"] }
sled = "0.34"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
subtle = "2.6"


